{{$NEXT}}

0.10     2011-06-07

[BUG FIXES]

- When parsing an email, the encoding attribute for parts was not set
  correctly, and ended up defaulting to 8bit for all parts. Now the encoding
  is set based on the part's Content-Transfer-Encoding header.


0.09     2011-06-06

[NEW FEATURES]

- This distro now ships a plugin for Email::Abstract, meaning you can use
  Courriel with Email::Sender.


0.08     2011-06-06

[API CHANGES]

- The content() and encoded_content() methods for Courriel::Part::Single now
  return strings, rather than references. This makes the typical use
  simpler. You can still get the reference directly by calling content_ref()
  and encoded_content_ref().

[BUG FIXES]

- Make sure that any Content-ID header set via Courriel::Builder is formatted
  properly (the id value should be wrapped in angle brackets).


0.07     2011-06-06

- Some tests were failing because File::LibMagic may return slightly different
  results on different systems (application/x-perl versus text/x-perl).


0.06     2011-06-05

- Add missing test prereq on File::Slurp.

- The clone_without_attachments() method could end up setting the wrong
  encoding when creating a new single part email.


0.05     2011-06-04

- The clone_without_attachments() method would die when calling on an email
  that contained both plain and html inline parts.


0.04     2011-06-04

- Add missing prereq on File::LibMagic (needed since 0.02).


0.03     2011-06-04

- The encoding parameter is now always set in a part's headers.


0.02     2011-06-04

- Added all_parts_matching() method to Courriel class.

- Added clone_without_attachments() method to Courriel class.

- The Courriel::Part::Single attribute raw_content has been renamed as
  encoded_content.

- The text_body_part() method is now called plain_body_part().

- The add() and unshift() methods in Courriel::Headers now accept only one
  value.

- Added Courriel::Headers->replace as a convenience method.
